Actualizo archivo setup.ini y README.md

--- a/setup.ini
+++ b/setup.ini
@@ -1,6 +1,7 @@
-﻿[Setup]
+[inicio]
+[setup]
 json=
-PbAutobuildPath = C:\Program Files (x86)\Appeon\PowerBuilderUtilities 22.0\pbautobuild220.exe
+PbAutobuildPath = C:\Program Files (x86)\Appeon\PowerBuilderUtilities 22.0
 PowerServerPath=C:\inetpub\wwwroot\powerserver
 PBNativePath=
 Scope =serverapi
@@ -24,6 +25,16 @@ filename =
 [powerserver.json]
 UserName = 
 UserPass = 
+version_control=S
+GitHubProfileName = 
+ProfileVisibility = 
+PersonalToken = 
+GitHubRepository = 
+GitBranch = 
+Pbl = 
+filename = 
+
+[pbnative.json]
 version_control=S
 GitHubProfileName = 
 ProfileVisibility = 
