Modifico archivo setup.ini. Ahora esta codificado en ANSI

--- a/setup.ini
+++ b/setup.ini
@@ -1,13 +1,12 @@
-[inicio]
 [setup]
 json=
 PbAutobuildPath = C:\Program Files (x86)\Appeon\PowerBuilderUtilities 22.0
 PowerServerPath=C:\inetpub\wwwroot\powerserver
 PBNativePath=
 Scope =serverapi
-Name = RamÃ³n San FÃ©lix
-GivenName = RamÃ³n
-FamilyName = San FÃ©lix
+Name = Ramón San Félix
+GivenName = Ramón
+FamilyName = San Félix
 WebSite = https://rsrsystem.blogspot.com
 Email =  rsrsystem.soft@gmail.com
 EmailVerified = true
