--- a/setup.ini
+++ b/setup.ini
@@ -1,44 +1,51 @@
 [setup]
 json=
-PbAutobuildPath = C:\Program Files (x86)\Appeon\PowerBuilderUtilities 22.0
-PowerServerPath=C:\inetpub\wwwroot\powerserver
-PBNativePath=
-Scope =serverapi
-Name = Ramón San Félix
-GivenName = Ramón
-FamilyName = San Félix
-WebSite = https://rsrsystem.blogspot.com
-Email =  rsrsystem.soft@gmail.com
-EmailVerified = true
-
-[powerclient.json]
-version_control=S
-GitHubProfileName = 
-ProfileVisibility = 
-PersonalToken = 
-GitHubRepository = 
-GitBranch = 
-Pbl = 
-filename = 
-
-[powerserver.json]
-UserName = 
-UserPass = 
-version_control=S
-GitHubProfileName = 
-ProfileVisibility = 
-PersonalToken = 
-GitHubRepository = 
-GitBranch = 
-Pbl = 
-filename = 
+PbAutobuildPath=C:\Program Files (x86)\Appeon\PowerBuilderUtilities 22.0
+DBMS=MSOLEDBSQL SQL Server
+LogPass=psw
+ServerName=server
+LogId=sa
+AutoCommit=False
+DBParm=Database='databse',TrimSpaces=1,DateFormat='\''dd-mm-yyyy\''',DateTimeFormat='\''dd-mm-yyyy hh:mm:ss\'''
+IniFie=Setting.ini
+IniConnectionKey=Setup
 
 [pbnative.json]
 version_control=S
-GitHubProfileName = 
-ProfileVisibility = 
-PersonalToken = 
-GitHubRepository = 
-GitBranch = 
-Pbl = 
-filename = 
+GitHubProfileName=rasanfe
+ProfileVisibility=Public
+GitHubRepository =Reports_PowerServer
+GitBranch=main
+Pbl=reports.pbl
+ProjectFileName=pbnative.srj
+
+[powerclient.json]
+version_control=S
+GitHubProfileName=rasanfe
+ProfileVisibility=Public
+GitHubRepository =Reports_PowerServer
+GitBranch=main
+Pbl=reports.pbl
+ProjectFileName=powerclient.srj
+
+[powerserver.json]
+IniFie=CloudSetting.ini
+IniUsersKey=Users
+IniTokenKey=Setup
+version_control=S
+GitHubProfileName=rasanfe
+ProfileVisibility=Public
+GitHubRepository =Reports_PowerServer
+GitBranch=main
+Pbl=reports.pbl
+ProjectFileName=powerserver.srj
+UserName=user
+UserPass=pass
+PowerServerPath=C:\inetpub\wwwroot\powerserver
+Scope=serverapi
+Name=Nombre
+GivenName=Nombre
+FamilyName=Apellido
+WebSite=PáginaWeb
+Email=Correo_Electrónico
+EmailVerified=true
